--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "fluent-ffmpeg": "^2.1.2",
+    "html-to-image": "^1.11.11",
     "octokit": "^3.1.0",
     "sharp": "^0.32.4"
   },
